test/domains/neth/enumToInt.good
enumToInt.chpl:2: error: Domains defined using tuple bounds must use tuples of coercible types. Cannot coerce between 'e' and 'int(64)'
